# definitions

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .project  .pydevproject  .readthedocs.yaml  .travis.yml  BASE.xsd  BUILDING.rst  CHANGES.rst  CMakeLists.txt  CMakeLists.txt.obsolete  CNAME  CONTRIBUTING.md  COPYING  CPackOptions.cmake.in  CPackOptions.cmake.in.obsolete  MANIFEST.in  Makefile  Makefile_old  NXDL_VERSION  NeXus.sch  NeXus.xsd  README  README.cmake.txt  README.cmake.txt.obsolete  README.make.txt  README.md  README.txt  all-files.txt  all-niac.txt  applying-nexus.html  authorgroup.html  batch.queue.01.sh  colophon.html  comment_collector.py  community.html  copyright.html  cspell.json  datarules.html  (+59 more)
applications/: CMakeLists.txt  CMakeLists.txt.obsolete  CMakeLists.txt.old  NXapm.nxdl.xml  NXarchive.nxdl.xml  NXarpes.nxdl.xml  NXazint1d.nxdl.xml  NXazint2d.nxdl.xml  NXcanSAS.nxdl.xml  NXdirecttof.nxdl.xml  NXellipsometry.nxdl.xml  NXem.nxdl.xml  NXem_edxs.nxdl.xml  NXfluo.nxdl.xml  NXgisas.nxdl.xml  NXindirecttof.nxdl.xml  NXiqproc.nxdl.xml  NXlauetof.nxdl.xml  NXmonopd.nxdl.xml  NXmonopd.xml  NXmpes.nxdl.xml  NXmpes_ARPES.nxdl.xml  NXmpes_arpes.nxdl.xml  NXmpes_parsed.yaml  NXmx.nxdl.xml  NXoptical_spectroscopy.nxdl.xml  NXphasetomo.nxdl.xml  NXraman.nxdl.xml  NXrefscan.nxdl.xml  NXreftof.nxdl.xml  NXsanssax.nxdl.xml  NXsas.nxdl.xml  NXsastof.nxdl.xml  NXscan.nxdl.xml  NXspe.nxdl.xml  NXsqom.nxdl.xml  NXstm.nxdl.xml  NXstress.nxdl.xml  NXstxm.nxdl.xml  NXtas.nxdl.xml  (+19 more)
base_classes/: CMakeLists.txt  NXaberration.nxdl.xml  NXactivity.nxdl.xml  NXactuator.nxdl.xml  NXamplifier.nxdl.xml  NXaperture.nxdl.xml  NXaperture.xml  NXapm_charge_state_analysis.nxdl.xml  NXapm_event_data.nxdl.xml  NXapm_hit_finding.nxdl.xml  NXapm_instrument.nxdl.xml  NXapm_measurement.nxdl.xml  NXapm_msr.nxdl.xml  NXapm_ranging.nxdl.xml  NXapm_reconstruction.nxdl.xml  NXapm_sim.nxdl.xml  NXapm_simulation.nxdl.xml  NXatom.nxdl.xml  NXattenuator.nxdl.xml  NXattenuator.xml  NXauger_line.nxdl.xml  NXbeam.nxdl.xml  NXbeam.xml  NXbeam_device.nxdl.xml  NXbeam_stop.nxdl.xml  NXbeam_stop.xml  NXbeam_transfer_matrix_table.nxdl.xml  NXbending_magnet.nxdl.xml  NXbending_magnet.xml  NXcalibration.nxdl.xml  NXcapillary.nxdl.xml  NXcg_alpha_complex.nxdl.xml  NXcg_cylinder.nxdl.xml  NXcg_cylinder_set.nxdl.xml  NXcg_ellipsoid.nxdl.xml  NXcg_ellipsoid_set.nxdl.xml  NXcg_face_list_data_structure.nxdl.xml  NXcg_geodesic_mesh.nxdl.xml  NXcg_grid.nxdl.xml  NXcg_half_edge_data_structure.nxdl.xml  (+237 more)
contributed_definitions/: CMakeLists.txt  NXIVtemp.nxdl.xml  NXaberration.nxdl.xml  NXaberration_model.nxdl.xml  NXaberration_model_ceos.nxdl.xml  NXaberration_model_nion.nxdl.xml  NXactivity.nxdl.xml  NXactuator.nxdl.xml  NXadc.nxdl.xml  NXafm.nxdl.xml  NXammeter.nxdl.xml  NXamplifier.nxdl.xml  NXaperture.nxdl.xml  NXaperture_em.nxdl.xml  NXapm.nxdl.xml  NXapm_charge_state_analysis.nxdl.xml  NXapm_composition_space_results.nxdl.xml  NXapm_compositionspace_config.nxdl.xml  NXapm_compositionspace_results.nxdl.xml  NXapm_evaporation_id_filter.nxdl.xml  NXapm_hit_finding.nxdl.xml  NXapm_hitmultiplicity_filter.nxdl.xml  NXapm_input_ranging.nxdl.xml  NXapm_input_reconstruction.nxdl.xml  NXapm_iontype_filter.nxdl.xml  NXapm_msr.nxdl.xml  NXapm_paraprobe_clusterer_config.nxdl.xml  NXapm_paraprobe_clusterer_results.nxdl.xml  NXapm_paraprobe_config_clusterer.nxdl.xml  NXapm_paraprobe_config_distancer.nxdl.xml  NXapm_paraprobe_config_intersector.nxdl.xml  NXapm_paraprobe_config_nanochem.nxdl.xml  NXapm_paraprobe_config_ranger.nxdl.xml  NXapm_paraprobe_config_selector.nxdl.xml  NXapm_paraprobe_config_spatstat.nxdl.xml  NXapm_paraprobe_config_surfacer.nxdl.xml  NXapm_paraprobe_config_tessellator.nxdl.xml  NXapm_paraprobe_config_transcoder.nxdl.xml  NXapm_paraprobe_distancer_config.nxdl.xml  NXapm_paraprobe_distancer_results.nxdl.xml  (+399 more)
ifbase_classes/: CMakeLists.txt  NXaperture.nxdl.xml  NXattenuator.nxdl.xml  NXbeam.nxdl.xml  NXbeam_stop.nxdl.xml  NXbending_magnet.nxdl.xml  NXcapillary.nxdl.xml  NXcharacterization.nxdl.xml  NXcollection.nxdl.xml  NXcollimator.nxdl.xml  NXcrystal.nxdl.xml  NXdata.nxdl.xml  NXdetector.nxdl.xml  NXdetector_group.nxdl.xml  NXdetector_module.nxdl.xml  NXdisk_chopper.nxdl.xml  NXentry.nxdl.xml  NXenvironment.nxdl.xml  NXevent_data.nxdl.xml  NXfermi_chopper.nxdl.xml  NXfilter.nxdl.xml  NXflipper.nxdl.xml  NXfresnel_zone_plate.nxdl.xml  NXgeometry.nxdl.xml  NXgrating.nxdl.xml  NXguide.nxdl.xml  NXinsertion_device.nxdl.xml  NXinstrument.nxdl.xml  NXlog.nxdl.xml  NXmirror.nxdl.xml  NXmoderator.nxdl.xml  NXmonitor.nxdl.xml  NXmonochromator.nxdl.xml  NXnote.nxdl.xml  NXorientation.nxdl.xml  NXparameters.nxdl.xml  NXpinhole.nxdl.xml  NXpolarizer.nxdl.xml  NXpositioner.nxdl.xml  NXprocess.nxdl.xml  (+13 more)
interfaces/: CMakeLists.txt  CMakeLists.txt~  NXIFBeamline_component.nxdl.xml  NXIFGeneric_detector_tof.nxdl.xml  NXIF_single_detector_tof.nxdl.xml  NXIFarea_detector.nxdl.xml  NXIFarea_detector_scanned.nxdl.xml  NXIFarea_detector_tof.nxdl.xml  NXIFcount_time.nxdl.xml  NXIFcount_time_scanned.nxdl.xml  NXIFgasdetector.nxdl.xml  NXIFgeneric_detector.nxdl.xml  NXIFgeneric_detector_scanned.nxdl.xml  NXIFlinear_detector.nxdl.xml  NXIFlinear_detector_scanned.nxdl.xml  NXIFlinear_detector_tof.nxdl.xml  NXIFmetadata.nxdl.xml  NXIFmonochromator.nxdl.xml  NXIFphoton_counter.nxdl.xml  NXIFsingle_detector.nxdl.xml  NXIFsingle_detector_scanned.nxdl.xml  NXIFsinglecrystal.nxdl.xml  cmake_install.cmake  nxdlformat.xsl
schema/: BASE.xsd  BASE.xsd.html  CMakeLists.txt  CMakeLists.txt.old  GenerateBASE.cmake  GenerateBASE.old.cmake  Makefile  Makefile_old  NAPITEST.xsd  NXapperture.xsd  NXchopper.xsd  NXdata.xsd  NXdata.xsd.html  NXdisk_chopper.xsd  NXentry.xsd  NXentry.xsd.html  NXfermi_chopper.xsd  NXmonopd_ref.xsd  NXnote.xsd  NXnote.xsd.html  NXprocess.xsd  NXprocess.xsd.html  NXroot.xsd  NXroot.xsd.html  NXsample.xsd  NXsample.xsd.html  NeXus.xsd  NeXus.xsd.html  PROCESSED.xsd  PROCESSED.xsd.html  README.txt  filelist.xml  nexus-class-documentation.xsl  testfile.xml
validate_cmdline/: CMakeLists.txt  nxvalidate_cli.bat.in  (+1 more)
(+4324 files in other folders)
