[build-system]
requires = ["setuptools>=64.0.1", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusdefinitions"
dynamic = ["version"]
authors = [
    { name = "NIAC" }
]
description = "Nexus definitions"
readme = "README.md"
license = { file = "LGPL.txt" }
requires-python = ""
classifiers = [
    "Operating System :: OS Independent"
]
dependencies = [
    "lxml",
    "pyyaml",
    "click>=7.1.2",
    "h5py>=3.6.0",
    "sphinx>=5",
    "sphinx-tabs",
    "sphinx-toolbox",
    "pytest",
    "black>=22.3",
    "flake8>=4",
    "isort>=5.10",
    "click>=7.1.2",
]

[project.urls]
"Homepage" = "https://nexusformat.org"

[project.scripts]
read_nexus = "dev_tools.utils.nexus:main"

[tools.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.setuptools]
packages = ["dev_tools"]
